src/Yaka.jj
/**
 *  Auteur: Pedrono Marie-Jo
 *
 * 	creation : 13 fevrier 2002
 *
 *  Nature : Projet Etudiant
 *
 */


options {
	JDK_VERSION="1.7";
}

PARSER_BEGIN(Yaka)

	public class Yaka {


		// Choix de l'interpreteur a utiliser
		public static String interpreterType = "YVMasm"; // YVM ou YVMasm

		// Interpreteur
		public static YVM Interpreter;

		// Nom du fichier a creer par l'interpreteur
		public static String scriptOutputName = "../programme-test.txt";


		// Main : point d'entree pour le compilateur
		public static void main(String args[]) {
			Yaka analyzer;
			java.io.InputStream input;

			// Recuperation du texte/script a traiter
			if(args.length==1) {
				Writer.print(args[args.length-1] + ": ");
				try {
					input = new java.io.FileInputStream(args[args.length-1]+".yaka");
				}
				catch (java.io.FileNotFoundException e) {
					Writer.errorln("Fichier introuvable !");
					return;
				}
			}
			else if (args.length==0) {
				Writer.println("\nLecture sur l'entree standard...\n");
				input = System.in;
			}
			else {
				Writer.errorln("Usage: java Gram [fichier]");
				return;
			}

			// Declaration de l'interpreteur
			if(interpreterType.equals("YVM")) {
				Interpreter = new YVM(scriptOutputName);
			}
			else if(interpreterType.equals("YVMasm")) {
				Interpreter = new YVMasm(scriptOutputName);
			}

			// Analyse
			try {

				analyzer = new Yaka(input);
				analyzer.analyse();

				Writer.println("\nAnalyse Syntaxique terminee !\n");

				// On affiche le resultat du tableau d'ident
				//Writer.println(IdentArray.string());

				// On affiche le resultat du tableau d'expression
				//Writer.println(Expression.string()) ;

				// On créer le script YVM
				Interpreter.outputSave();

				Writer.println("Programme de sortie : "+scriptOutputName+"\n");

			}
			catch(ParseException e) {
				TokenMgrError error = new TokenMgrError(
					"Erreur de syntaxe, ligne "+YakaTokenManager.currentLine+" :\n"+e.getMessage(),
					TokenMgrError.LEXICAL_ERROR
				);
				Writer.errorln(error.getMessage());
			}
		}


		/**
		 *  Lecture d'un programme
		 */
		public void prog() {

		}

	}

PARSER_END(Yaka)



/***************************************/
/********** TOKEN DEFINITIONS **********/
/***************************************/

TOKEN_MGR_DECLS : {
	public static String identLu, chaineLue;
	public static int entierLu;
	public static int currentLine = 1;
}


/*** Skip whitespace and comments ***/
SKIP : {
	  " "
	| "\t"
	| "\n" {YakaTokenManager.currentLine++;}
	| "\r"
	| "(*" : IN_COMMENT
}

<IN_COMMENT> MORE: {
	< ~[] >
}

<IN_COMMENT> SKIP: {
	< "*)" > {SwitchTo(DEFAULT);}
}


/*** Mots reserves ***/
TOKEN : {
	  <PLUS : "+">
	| <MOINS : "-">
	| <MUL : "*">
	| <DIV : "/">
	| <INF : "<">
	| <SUP : ">">
	| <INFEGAL : "<=">
	| <SUPEGAL : ">=">
	| <EGAL : "=">
	| <DIFF : "<>">
	| <ET : "ET">
	| <OU : "OU">
	| <NON : "NON">
	| <ERROR : "error">
	| < BOOLEEN: "BOOLEEN" >
	| < VAR: "VAR" >
	| < FAIRE: "FAIRE" >
	| < SINON: "SINON" >
	| < POUR: "POUR" >
	| < SI: "SI" >
	| < FSI: "FSI">
	| < ENTIER: "ENTIER" >
	| < RETOURNE: "RETOURNE" >
	| < VRAI: "VRAI" >
	| < TANTQUE: "TANTQUE" >
	| <CONST : "CONST">
	| <FAUX : "FAUX">
	| <FAIT : "FAIT">
	| <FONCTION : "FONCTION">
	| <FFONCTION  : "FFONCTION">
	| <PROGRAMME : "PROGRAMME" >
	| <FPROGRAMME: "FPROGRAMME" >
	| <PRINCIPAL : "PRINCIPAL">
	| <FPRINCIPAL : "FPRINCIPAL">
	| <ALORS : "ALORS">
	| <ECRIRE : "ECRIRE">
	| <LIRE : "LIRE">
	| <ALALIGNE : "ALALIGNE">
}


/*** unites de base nombres, idents,  strings ***/
TOKEN  : {
	  < #chiffre : ["0"-"9"] >

	| < #lettre: ["A"-"Z","a"-"z"] >

	| < entier : (<chiffre>)+ > {
		entierLu = Integer.parseInt(image.toString());
	}

	| < ident : <lettre> (<lettre> | <chiffre>)* > {
		identLu = image.toString();
	}

	| < chaine : "\"" (~["\""])* "\"" | "'" (~["'"])* "'" > {
		chaineLue = image.toString();
	}
}



/**************************************/
/********debut de la grammaire ********/
/**************************************/

void analyse() : {} {
	<PROGRAMME> <ident>{
		Yaka.Interpreter.entete();
		//Yaka.result += "entete" ;
	}
	bloc()
	<FPROGRAMME>{
		Yaka.Interpreter.queue();
		//Yaka.result += "\nqueue" ;
	}
}


void bloc() : {} {
	(declConst())*
	(declVar())* {
		Yaka.Interpreter.ouvrePrinc(IdentArray.nbVar());
		//Yaka.result += "\nouvrePrinc "+ IdentArray.nbVar() ;
	}
	suiteInstr()
}


void declConst() : {} {
	<CONST>
	defConst()
	( "," defConst() )*
	";"
}


void defConst() : {} {
	(
		(<ident>) {
			IdentArray.lastIdent = YakaTokenManager.identLu;
		}

		"=" valConst()
	) {
		IdentArray.add(IdentArray.lastIdent, new IdConst(IdentArray.lastValue, IdentArray.lastType));
	}
}


void valConst() : {} {
	(<entier>) {
		IdentArray.lastValue = YakaTokenManager.entierLu;
		IdentArray.lastType = tokenImage[ENTIER];
	}

	| (<ident>) {
		IdConst i = (IdConst) IdentArray.get(YakaTokenManager.identLu);

		try {
			if(i == null)
				throw new ParseException("Identifiant \""+YakaTokenManager.identLu+"\" non existant");

			IdentArray.lastValue = i.value;
			IdentArray.lastType = i.type;
		}
		catch(ParseException e) {
			TokenMgrError error = new TokenMgrError(
				"Erreur lexicale, ligne "+YakaTokenManager.currentLine+" :\n"+e.getMessage(),
				TokenMgrError.LEXICAL_ERROR
			);
			Writer.errorln(error.getMessage());
		}

 	}

	| (<VRAI>) {
		IdentArray.lastValue = Yaka.Interpreter.TRUE;
		IdentArray.lastType = tokenImage[BOOLEEN];
	}

	| (<FAUX>) {
		IdentArray.lastValue = Yaka.Interpreter.FALSE;
		IdentArray.lastType = tokenImage[BOOLEEN];
	}

}


void declVar() : {} {
	<VAR> type()
	(<ident>) {
		IdentArray.shiftOffset();
		IdentArray.add(
			YakaTokenManager.identLu,
			new IdVar(IdentArray.currentOffset, IdentArray.lastType)
		);
	}
	(
		","
		(<ident>) {
			IdentArray.shiftOffset();
			IdentArray.add(
				YakaTokenManager.identLu,
				new IdVar(IdentArray.currentOffset, IdentArray.lastType)
			);
		}
	)*
	";"
}


void type() :{} {
	(<ENTIER>) {
	  	IdentArray.lastType = tokenImage[ENTIER];
	}

	| (<BOOLEEN>) {
		IdentArray.lastType = tokenImage[BOOLEEN];
	}
}


/**
 * Syntaxe des instructions
 */
void suiteInstr() : {} {
	
		instruction()
		( ";" (instruction())? )*
	
}

void instruction() : {} {
	affectation() |
	lecture()|
	ecriture()
}

void affectation() : {} {
	(<ident>){	try{	
		
				if (IdentArray.get(YakaTokenManager.identLu).isVar()) 
					{int saveoffset = IdentArray.get(YakaTokenManager.identLu).getValue();}
				else
					throw new ParseException("Affectation impossible sur une constante");
					}
			catch(ParseException e) {
				TokenMgrError error = new TokenMgrError(
					"Erreur d'affectation, ligne "+YakaTokenManager.currentLine+" :\n"+e.getMessage(),
					TokenMgrError.LEXICAL_ERROR
				);
				Writer.errorln(error.getMessage());
			}
	
	} 
	<EGAL> expression(){Yaka.Interpreter.affect(saveoffset);}
	
}

void lecture() : {} {
	<LIRE>"("<ident>")"{Yaka.Interpreter.lireEnt();
	}
}

void ecriture() : {} {
	{boolean chaine;
	String s="";}
	<ECRIRE>"("(expression(){Yaka.Interpreter.ecrireEnt();
				chaine = false;}
		|<chaine>{	chaine = true;
				s +=chaineLue;}
	")"{if chaine = true Yaka.Interpreter.ecrireChaine(s)};
		|
	<ALALIGNE>{Yaka.Interpreter.aLaLigne();
}
/**
 * Expression
 */
void expression() : {} {

	simpleExpr()

	(
		opRel()
		simpleExpr() {

			String t1 = Expression.popType();
			String t2 = Expression.popType();
			String op = Expression.popOperator();

			String inf =  tokenImage[INF];
			String infegal = tokenImage[INFEGAL];
			String sup = tokenImage[SUP];
			String supegal = tokenImage[SUPEGAL];
			String egal = tokenImage[EGAL];
			String diff = tokenImage[DIFF];

			try {

				String res = Expression.binExprReturn(t1,t2,op);

				if(res == tokenImage[ERROR])
					throw new ParseException("Operation de type "+t1+" "+op+" "+t2+" interdite");

				else {
					Expression.addType(res);
					//String s = "" ;

					if (op == inf)
						Yaka.Interpreter.iinf();
						//s = "\niinf ";

					else if (op == infegal)
						Yaka.Interpreter.iinfegal();
						//s = "\niinfegal ";

					else if (op == sup)
						Yaka.Interpreter.isup();
						//s = "\nisup ";

					else if (op == supegal)
						Yaka.Interpreter.isupegal();
						//s = "\nisupegal ";

					else if (op == egal)
						Yaka.Interpreter.iegal();
						//s = "\niegal ";

					else if (op == diff)
						Yaka.Interpreter.idiff();
						//s = "\nidiff ";

					else
						throw new ParseException("Operateur "+op+" innatendu");

					//Yaka.result += s;
				}
			}
			catch(ParseException e) {
				TokenMgrError error = new TokenMgrError(
					"Erreur d'expression, ligne "+YakaTokenManager.currentLine+" :\n"+e.getMessage(),
					TokenMgrError.LEXICAL_ERROR
				);
				Writer.errorln(error.getMessage());
			}
		}
	)?

}


void simpleExpr() : {} {

	terme()
	(
		opAdd()
		terme() {

			String t1 = Expression.popType();
			String t2 = Expression.popType();
			String op = Expression.popOperator();

			String plus = tokenImage[PLUS];
			String moins = tokenImage[MOINS];
			String ou = tokenImage[OU];

			try {

				String res = Expression.binExprReturn(t1,t2,op);

				if(res == tokenImage[ERROR])
					throw new ParseException("Operation de type "+t1+" "+op+" "+t2+" interdite");

				else {
					Expression.addType(res);
					//String s = "";

					if(op == plus)
						Yaka.Interpreter.iadd();
						//s = "\niadd ";

					else if (op == moins)
						Yaka.Interpreter.isub();
						//s = "\nisub ";

					else if (op == ou)
						Yaka.Interpreter.ior();
						//s = "\nior ";

					else
						throw new ParseException("Operateur "+op+" innatendu");

					//Yaka.result += s;
				}
			}
			catch(ParseException e) {
				TokenMgrError error = new TokenMgrError(
					"Erreur d'expression, ligne "+YakaTokenManager.currentLine+" :\n"+e.getMessage(),
					TokenMgrError.LEXICAL_ERROR
				);
				Writer.errorln(error.getMessage());
			}
		}
	)*

}


void terme() : {} {

	facteur()
	(
		opMul()
		facteur() {

			String t1 = Expression.popType();
			String t2 = Expression.popType();
			String op = Expression.popOperator();

			String mul = tokenImage[MUL];
			String div = tokenImage[DIV];
			String et = tokenImage[ET];

			try {

				String res = Expression.binExprReturn(t1,t2,op);

				if(res == tokenImage[ERROR])
					throw new ParseException("Operation de type "+t1+" "+op+" "+t2+" interdite");

				else {
					Expression.addType(res);
					//String s = "";

					if (op == mul)
						Yaka.Interpreter.imul();
						//s = "\nimul ";

					else if (op == div)
						Yaka.Interpreter.idiv();
						//s = "\nidiv ";

					else if(op == et)
						Yaka.Interpreter.iand();
						//s = "\niand ";

					else
						throw new ParseException("Operateur "+op+" innatendu");

					//Yaka.result += s;
				}
			}
			catch(ParseException e) {
				TokenMgrError error = new TokenMgrError(
					"Erreur d'expression, ligne "+YakaTokenManager.currentLine+" :\n"+e.getMessage(),
					TokenMgrError.LEXICAL_ERROR
				);
				Writer.errorln(error.getMessage());
			}
		}
	)*

}

void facteur() : {} {

	primaire()
	| opNeg() primaire() {

		String t = Expression.popType();
		String op = Expression.popOperator();

		try {

			String res = Expression.unExprReturn(t, op);

			if(res == tokenImage[ERROR])
					throw new ParseException("Operation de type "+op+" "+t+" interdite");

			else {
				Expression.addType(res);
				//String s = "";

				if(op == tokenImage[MOINS])
					Yaka.Interpreter.ineg();
					//s = "\nineg ";

				else if(op == tokenImage[NON])
					Yaka.Interpreter.inot();
					//s = "\ninot ";

				else
					throw new ParseException("Operateur "+op+" innatendu");

				//Yaka.result += s ;
			}
		}
		catch(ParseException e) {
			TokenMgrError error = new TokenMgrError(
				"Erreur d'expression, ligne "+YakaTokenManager.currentLine+" :\n"+e.getMessage(),
				TokenMgrError.LEXICAL_ERROR
			);
			Writer.errorln(error.getMessage());
		}
	}
}


void primaire (): {} {
	valeur()
	| "(" expression() ")"
}


void valeur () : {} {

	<entier> {
		Expression.addType(tokenImage[ENTIER]);
		Yaka.Interpreter.iconst(YakaTokenManager.entierLu);
		//Yaka.result += "\niconst " + YakaTokenManager.entierLu ;
	}

	| <ident> {
		Ident id = IdentArray.get(YakaTokenManager.identLu);
		Expression.addType(IdentArray.get(YakaTokenManager.identLu).type);

		if(id.isVar())
			Yaka.Interpreter.iload(id.getValue());
			//Yaka.result += "\niload " ;
		else if(id.isConst())
			Yaka.Interpreter.iconst(id.getValue());
			//Yaka.result += "\niconst " ;

		//Yaka.result += id.getValue() ;
	}

	| <VRAI> 	{
		Expression.addType(tokenImage[BOOLEEN]);
		Yaka.Interpreter.iconst(Yaka.Interpreter.TRUE);
		//Yaka.result += "\niconst " + Ident.TRUE ;
	}

	| <FAUX> 	{
		Expression.addType(tokenImage[BOOLEEN]);
		Yaka.Interpreter.iconst(Yaka.Interpreter.FALSE);
		//Yaka.result += "\niconst " + Ident.FALSE ;
	}

}


void opRel() : {} {
	<EGAL> {
		Expression.addOperator(tokenImage[EGAL]);
	}

	| <DIFF> {
		Expression.addOperator(tokenImage[DIFF]);
	}

	| <INF>	{
		Expression.addOperator(tokenImage[INF]);
	}

	| <INFEGAL>	{
		Expression.addOperator(tokenImage[INFEGAL]);
	}

	| <SUP> {
		Expression.addOperator(tokenImage[SUP]);
	}

	| <SUPEGAL>	{
		Expression.addOperator(tokenImage[SUPEGAL]);
	}
}


void opAdd() : {} {
	<PLUS> {
		Expression.addOperator(tokenImage[PLUS]);
	}

	| <MOINS> {
		Expression.addOperator(tokenImage[MOINS]);
	}

	| <OU> {
		Expression.addOperator(tokenImage[OU]);
	}
}


void opMul() : {} {
	<MUL> {
		Expression.addOperator(tokenImage[MUL]);
	}

	| <DIV> {
		Expression.addOperator(tokenImage[DIV]);
	}

	| <ET> {
		Expression.addOperator(tokenImage[ET]);
	}
}


void opNeg() : {} {
	<MOINS> {
		Expression.addOperator(tokenImage[MOINS]);
	}

	| <NON> {
		Expression.addOperator(tokenImage[NON]);
	}
}
