src/Yaka.java
/* Generated By:JavaCC: Do not edit this line. Yaka.java */
        public class Yaka implements YakaConstants {


                // Choix de l'interpreteur a utiliser
                public static String interpreterType = "YVMasm"; // YVM ou YVMasm

                // Interpreteur
                public static YVM Interpreter;

                // Nom du fichier a creer par l'interpreteur
                public static String scriptOutputName ;


                public static boolean err = false ;

                // Main : point d'entree pour le compilateur
                public static void main(String args[]) {
                        Yaka analyzer;
                        java.io.InputStream input;

                        // Recuperation du texte/script a traiter
                        if(args.length==1) {
                                Writer.print(args[args.length-1] + ": ");
                                scriptOutputName = "../" + args[args.length-1] + ".asm";
                                try {
                                        input = new java.io.FileInputStream(args[args.length-1]+".yaka");
                                }
                                catch (java.io.FileNotFoundException e) {
                                        err = true ;
                                        Writer.errorln("Fichier introuvable !");
                                        return;
                                }
                        }
                        else if (args.length==0) {
                                Writer.println("\u005cnLecture sur l'entree standard...\u005cn");
                                scriptOutputName = "../out.asm";
                                input = System.in;
                        }
                        else {
                                Writer.errorln("Usage: java Gram [fichier]");
                                return;
                        }

                        // Declaration de l'interpreteur
                        if(interpreterType.equals("YVM")) {
                                Interpreter = new YVM(scriptOutputName);
                        }
                        else if(interpreterType.equals("YVMasm")) {
                                Interpreter = new YVMasm(scriptOutputName);
                        }

                        // Analyse
                        try {

                                analyzer = new Yaka(input);
                                analyzer.analyse();
                                if (err)
                                        throw new ParseException("\u005cn\u005cnPROGRAMME NON COMPILE\u005cn");

                                Writer.println("\u005cnAnalyse Syntaxique terminee !\u005cn");

                                // On affiche le resultat du tableau d'ident
                                //Writer.println(IdentArray.string());

                                // On affiche le resultat du tableau d'expression
                                //Writer.println(Expression.string()) ;

                                // On créer le script YVM
                                Interpreter.outputSave();

                                Writer.println("Programme de sortie : "+scriptOutputName+"\u005cn");

                        }
                        catch(ParseException e) {
                                err = true ;
                                TokenMgrError error = new TokenMgrError(
                                        "\u005cn"+e.getMessage(),
                                        TokenMgrError.LEXICAL_ERROR
                                );
                                Writer.errorln(error.getMessage());
                        }
                }


                /**
		 *  Lecture d'un programme
		 */
                public void prog() {

                }

/**************************************/
/********debut de la grammaire ********/
/**************************************/
  static final public void analyse() throws ParseException {
    jj_consume_token(PROGRAMME);
    jj_consume_token(ident);
                Yaka.Interpreter.entete();
    bloc();
    jj_consume_token(FPROGRAMME);
                Yaka.Interpreter.queue();
  }

  static final public void bloc() throws ParseException {
    label_1:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case CONST:
        ;
        break;
      default:
        jj_la1[0] = jj_gen;
        break label_1;
      }
      declConst();
    }
    label_2:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case VAR:
        ;
        break;
      default:
        jj_la1[1] = jj_gen;
        break label_2;
      }
      declVar();
    }
                Yaka.Interpreter.ouvrePrinc(IdentArray.nbVar());
    suiteInstr();
  }

  static final public void declConst() throws ParseException {
    jj_consume_token(CONST);
    defConst();
    label_3:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
        ;
        break;
      default:
        jj_la1[2] = jj_gen;
        break label_3;
      }
      jj_consume_token(51);
      defConst();
    }
    jj_consume_token(52);
  }

  static final public void defConst() throws ParseException {
    jj_consume_token(ident);
                        IdentArray.lastIdent = YakaTokenManager.identLu;
    jj_consume_token(EGAL);
    valConst();
                IdentArray.add(IdentArray.lastIdent, new IdConst(IdentArray.lastValue, IdentArray.lastType));
  }

  static final public void valConst() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case entier:
      jj_consume_token(entier);
                IdentArray.lastValue = YakaTokenManager.entierLu;
                IdentArray.lastType = tokenImage[ENTIER];
      break;
    case ident:
      jj_consume_token(ident);
                IdConst i = (IdConst) IdentArray.get(YakaTokenManager.identLu);

                try {
                        if(i == null)
                                {if (true) throw new ParseException("Identifiant \u005c""+YakaTokenManager.identLu+"\u005c" non existant");}

                        IdentArray.lastValue = i.value;
                        IdentArray.lastType = i.type;
                }
                catch(ParseException e) {
                        err = true ;
                        TokenMgrError error = new TokenMgrError(
                                "Erreur lexicale, ligne "+YakaTokenManager.currentLine+" :\u005cn"+e.getMessage(),
                                TokenMgrError.LEXICAL_ERROR
                        );
                        Writer.errorln(error.getMessage());
                }
      break;
    case VRAI:
      jj_consume_token(VRAI);
                IdentArray.lastValue = Yaka.Interpreter.TRUE;
                IdentArray.lastType = tokenImage[BOOLEEN];
      break;
    case FAUX:
      jj_consume_token(FAUX);
                IdentArray.lastValue = Yaka.Interpreter.FALSE;
                IdentArray.lastType = tokenImage[BOOLEEN];
      break;
    default:
      jj_la1[3] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void declVar() throws ParseException {
    jj_consume_token(VAR);
    type();
    jj_consume_token(ident);
                IdentArray.shiftOffset();
                IdentArray.add(
                        YakaTokenManager.identLu,
                        new IdVar(IdentArray.currentOffset, IdentArray.lastType)
                );
    label_4:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 51:
        ;
        break;
      default:
        jj_la1[4] = jj_gen;
        break label_4;
      }
      jj_consume_token(51);
      jj_consume_token(ident);
                        IdentArray.shiftOffset();
                        IdentArray.add(
                                YakaTokenManager.identLu,
                                new IdVar(IdentArray.currentOffset, IdentArray.lastType)
                        );
    }
    jj_consume_token(52);
  }

  static final public void type() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ENTIER:
      jj_consume_token(ENTIER);
                IdentArray.lastType = tokenImage[ENTIER];
      break;
    case BOOLEEN:
      jj_consume_token(BOOLEEN);
                IdentArray.lastType = tokenImage[BOOLEEN];
      break;
    default:
      jj_la1[5] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/**
 * Syntaxe des instructions
 */
  static final public void suiteInstr() throws ParseException {
    instruction();
    label_5:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case 52:
        ;
        break;
      default:
        jj_la1[6] = jj_gen;
        break label_5;
      }
      jj_consume_token(52);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case ECRIRE:
      case LIRE:
      case ALALIGNE:
      case ident:
        instruction();
        break;
      default:
        jj_la1[7] = jj_gen;
        ;
      }
    }
  }

  static final public void instruction() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ident:
      affectation();
      break;
    case LIRE:
      lecture();
      break;
    case ECRIRE:
    case ALALIGNE:
      ecriture();
      break;
    default:
      jj_la1[8] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

  static final public void affectation() throws ParseException {
    jj_consume_token(ident);
                Ident affectId = IdentArray.get(YakaTokenManager.identLu);
                try {
                        if(affectId.isConst())
                                {if (true) throw new ParseException("Affectation impossible sur une constante");}
                }
                catch(ParseException e) {
                        err = true ;
                        TokenMgrError error = new TokenMgrError(
                                "Erreur d'affectation, ligne "+YakaTokenManager.currentLine+" :\u005cn"+e.getMessage(),
                                TokenMgrError.LEXICAL_ERROR
                        );
                        Writer.errorln(error.getMessage());
                }
    jj_consume_token(EGAL);
    expression();
                Yaka.Interpreter.affect(affectId);
  }

  static final public void lecture() throws ParseException {
    jj_consume_token(LIRE);
    jj_consume_token(53);
    jj_consume_token(ident);
    jj_consume_token(54);
                Yaka.Interpreter.lireEnt(IdentArray.get(YakaTokenManager.identLu));
  }

  static final public void ecriture() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case ECRIRE:
      jj_consume_token(ECRIRE);
      jj_consume_token(53);
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MOINS:
      case NON:
      case VRAI:
      case FAUX:
      case entier:
      case ident:
      case 53:
        expression();
                        // Todo
                        Yaka.Interpreter.ecrireEnt();
        break;
      case chaine:
        jj_consume_token(chaine);
                        Yaka.Interpreter.ecrireChaine(YakaTokenManager.chaineLue);
        break;
      default:
        jj_la1[9] = jj_gen;
        jj_consume_token(-1);
        throw new ParseException();
      }
      jj_consume_token(54);
      break;
    case ALALIGNE:
      jj_consume_token(ALALIGNE);
                Yaka.Interpreter.aLaLigne();
      break;
    default:
      jj_la1[10] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }

/**
 * Expression
 */
  static final public void expression() throws ParseException {
    simpleExpr();
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case INF:
    case SUP:
    case INFEGAL:
    case SUPEGAL:
    case EGAL:
    case DIFF:
      opRel();
      simpleExpr();
                        String t1 = Expression.popType();
                        String t2 = Expression.popType();
                        String op = Expression.popOperator();

                        String inf =  tokenImage[INF];
                        String infegal = tokenImage[INFEGAL];
                        String sup = tokenImage[SUP];
                        String supegal = tokenImage[SUPEGAL];
                        String egal = tokenImage[EGAL];
                        String diff = tokenImage[DIFF];

                        try {

                                String res = Expression.binExprReturn(t1,t2,op);

                                if(res == tokenImage[ERROR] && t1 != tokenImage[ERROR] && t2 != tokenImage[ERROR])
                                        {if (true) throw new ParseException("Operation de type "+t1+" "+op+" "+t2+" interdite");}

                                else {
                                        Expression.addType(res);

                                        if (op == inf)
                                                Yaka.Interpreter.iinf();

                                        else if (op == infegal)
                                                Yaka.Interpreter.iinfegal();

                                        else if (op == sup)
                                                Yaka.Interpreter.isup();

                                        else if (op == supegal)
                                                Yaka.Interpreter.isupegal();

                                        else if (op == egal)
                                                Yaka.Interpreter.iegal();

                                        else if (op == diff)
                                                Yaka.Interpreter.idiff();

                                        else
                                                {if (true) throw new ParseException("Operateur "+op+" inattendu");}
                                }
                        }
                        catch(ParseException e) {
                                err = true ;
                                TokenMgrError error = new TokenMgrError(
                                        "Erreur d'expression, ligne "+YakaTokenManager.currentLine+" :\u005cn"+e.getMessage(),
                                        TokenMgrError.LEXICAL_ERROR
                                );
                                Writer.errorln(error.getMessage());
                        }
      break;
    default:
      jj_la1[11] = jj_gen;
      ;
    }
  }

  static final public void simpleExpr() throws ParseException {
    terme();
    label_6:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case PLUS:
      case MOINS:
      case OU:
        ;
        break;
      default:
        jj_la1[12] = jj_gen;
        break label_6;
      }
      opAdd();
      terme();
                        String t1 = Expression.popType();
                        String t2 = Expression.popType();
                        String op = Expression.popOperator();

                        String plus = tokenImage[PLUS];
                        String moins = tokenImage[MOINS];
                        String ou = tokenImage[OU];

                        try {

                                String res = Expression.binExprReturn(t1,t2,op);

                                if(res == tokenImage[ERROR]&& t1 != tokenImage[ERROR] && t2 != tokenImage[ERROR])
                                        {if (true) throw new ParseException("Operation de type "+t1+" "+op+" "+t2+" interdite");}

                                else {
                                        Expression.addType(res);

                                        if(op == plus)
                                                Yaka.Interpreter.iadd();

                                        else if (op == moins)
                                                Yaka.Interpreter.isub();

                                        else if (op == ou)
                                                Yaka.Interpreter.ior();

                                        else
                                                {if (true) throw new ParseException("Operateur "+op+" innatendu");}
                                }
                        }
                        catch(ParseException e) {
                                err = true ;
                                TokenMgrError error = new TokenMgrError(
                                        "Erreur d'expression, ligne "+YakaTokenManager.currentLine+" :\u005cn"+e.getMessage(),
                                        TokenMgrError.LEXICAL_ERROR
                                );
                                Writer.errorln(error.getMessage());
                        }
    }
  }

  static final public void terme() throws ParseException {
    facteur();
    label_7:
    while (true) {
      switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
      case MUL:
      case DIV:
      case ET:
        ;
        break;
      default:
        jj_la1[13] = jj_gen;
        break label_7;
      }
      opMul();
      facteur();
                        String t1 = Expression.popType();
                        String t2 = Expression.popType();
                        String op = Expression.popOperator();

                        String mul = tokenImage[MUL];
                        String div = tokenImage[DIV];
                        String et = tokenImage[ET];

                        try {

                                String res = Expression.binExprReturn(t1,t2,op);

                                if(res == tokenImage[ERROR] && t1 != tokenImage[ERROR] && t2 != tokenImage[ERROR])
                                        {if (true) throw new ParseException("Operation de type "+t1+" "+op+" "+t2+" interdite");}

                                else {
                                        Expression.addType(res);

                                        if (op == mul)
                                                Yaka.Interpreter.imul();

                                        else if (op == div)
                                                Yaka.Interpreter.idiv();

                                        else if(op == et)
                                                Yaka.Interpreter.iand();

                                        else
                                                {if (true) throw new ParseException("Operateur "+op+" innatendu");}
                                }
                        }
                        catch(ParseException e) {
                                err = true ;
                                TokenMgrError error = new TokenMgrError(
                                        "Erreur d'expression, ligne "+YakaTokenManager.currentLine+" :\u005cn"+e.getMessage(),
                                        TokenMgrError.LEXICAL_ERROR
                                );
                                Writer.errorln(error.getMessage());
                        }
    }
  }

  static final public void facteur() throws ParseException {
    switch ((jj_ntk==-1)?jj_ntk():jj_ntk) {
    case VRAI:
    case FAUX:
    case entier:
    case ident:
    case 53:
      primaire();
      break;
    case MOINS:
    case NON:
      opNeg();
      primaire();
                String t = Expression.popType();
                String op = Expression.popOperator();

                try {

                        String res = Expression.unExprReturn(t, op);

                        if(res == tokenImage[ERROR] && t != tokenImage[ERROR])
                                        {if (true) throw new ParseException("Operation de type "+op+" "+t+" interdite");}

                        else {
                                Expression.addType(res);

                                if(op == tokenImage[MOINS])
                                        Yaka.Interpreter.ineg();

                                else if(op == tokenImage[NON])
                                        Yaka.Interpreter.inot();

                                else
                                        {if (true) throw new ParseException("Operateur "+op+" innatendu");}
                        }
                }
                catch(ParseException e) {
                        err = true ;
                        TokenMgrError error = new TokenMgrError(
                                "Erreur d'expression, ligne "+YakaTokenManager.currentLine+" :\u005cn"+e.getMessage(),
                                TokenMgrError.LEXICAL_ERROR
                        );
                        Writer.errorln(error.getMessage());
                }
      break;
    default:
      jj_la1[14] = jj_gen;
      jj_consume_token(-1);
      throw new ParseException();
    }
  }
